--- a/style-responsive.css
+++ b/style-responsive.css
@@ -14,6 +14,9 @@
         margin: 0;
         width: 100%;
     }
+    img{
+        height: 150px;
+    }
 } 
 
 /* Steps */
@@ -30,6 +33,9 @@
         margin: 0;
         width: 100%;
     }
+    img{
+        height: 150px;
+    }
 }
 
 @media screen and (max-width:420px) {
@@ -39,6 +45,9 @@
     #why .row {
         margin: 0;
         width: 100%;
+    }
+    img{
+        height: 150px;
     }
 }
 
